--- a/problem.html
+++ b/problem.html
@@ -25,7 +25,7 @@
         <h1 class="title">PROBLEM <br> STATEMENTS.</h1>
         <div class="left">
             <video autoplay muted class="video">
-                <source src="assets/trash.mp4" type="video/mp4">
+                <source src="https://drive.google.com/file/d/1PYCz-Q31Bu88PkN_rGN1H029L4rzkrGB/view?usp=share_link" type="video/mp4">
             </video>
         </div>
         <svg class="jellyfish" width="24" height="24" viewBox="0 0 24 24" fill="none"
