--- a/problem.html
+++ b/problem.html
@@ -24,10 +24,10 @@
         </div>
         <h1 class="title">PROBLEM <br> STATEMENTS.</h1>
         <div class="left">
-<!--             <video autoplay muted class="video">
-                <source src="https://drive.google.com/file/d/1PYCz-Q31Bu88PkN_rGN1H029L4rzkrGB/view?usp=share_link" type="video/mp4">
-            </video> -->
-            <iframe muted class="video" src="https://drive.google.com/file/d/1PYCz-Q31Bu88PkN_rGN1H029L4rzkrGB/preview" allow="autoplay"></iframe>
+            <video autoplay muted class="video">
+                <source src="assets/trash.mp4" type="video/mp4">
+            </video>
+<!--             <iframe muted class="video" src="https://drive.google.com/file/d/1PYCz-Q31Bu88PkN_rGN1H029L4rzkrGB/preview" allow="autoplay"></iframe> -->
         </div>
         <svg class="jellyfish" width="24" height="24" viewBox="0 0 24 24" fill="none"
         xmlns="http://www.w3.org/2000/svg">
