--- a/problem.html
+++ b/problem.html
@@ -25,7 +25,7 @@
         <h1 class="title">PROBLEM <br> STATEMENTS.</h1>
         <div class="left">
             <video autoplay muted class="video">
-                <source src="https://drive.google.com/uc?export=download&id=1PYCz-Q31Bu88PkN_rGN1H029L4rzkrGB" type="video/mp4">
+                <source src="assets/trash.mp4" type="video/mp4">
             </video>
 <!--             <iframe muted class="video" src="https://drive.google.com/file/d/1PYCz-Q31Bu88PkN_rGN1H029L4rzkrGB/preview" allow="autoplay"></iframe> -->
         </div>
